# kebab

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS.md  HANDOFF.md  IMPL_BRIEF.md  IMPL_REPORT.md  README.md  SPIKE_BRIEF.md  SPIKE_REPORT.md  kebab_local_rust_report.md
crates/kb-app/: Cargo.toml
crates/kb-app/src/: app.rs  lib.rs  logging.rs
crates/kb-app/tests/: ask_smoke.rs  ingest_lexical.rs  search_lexical.rs  search_vector.rs
crates/kb-cli/: Cargo.toml
crates/kb-cli/src/: main.rs  wire.rs
crates/kb-config/: Cargo.toml
crates/kb-config/src/: lib.rs
crates/kb-core/: Cargo.toml
crates/kb-core/src/: answer.rs  asset.rs  chunk.rs  citation.rs  document.rs  ids.rs  ingest.rs  lib.rs  metadata.rs  normalize.rs
crates/kb-llm/: Cargo.toml
crates/kb-llm/src/: lib.rs  mock.rs
crates/kb-llm/tests/: mock.rs  reexports.rs
crates/kb-normalize/: Cargo.toml
crates/kb-normalize/src/: lib.rs
crates/kb-normalize/tests/: normalize_snapshot.rs
crates/kb-parse-md/: Cargo.toml
crates/kb-parse-md/src/: blocks.rs  frontmatter.rs  lib.rs
crates/kb-parse-md/tests/: blocks_snapshots.rs  frontmatter_snapshots.rs
crates/kb-parse-types/: Cargo.toml
crates/kb-parse-types/src/: lib.rs
crates/kb-rag/: Cargo.toml
crates/kb-rag/src/: lib.rs  pipeline.rs
crates/kb-rag/tests/: pipeline.rs
crates/kb-search/: Cargo.toml
crates/kb-search/src/: citation_helper.rs  hybrid.rs  lexical.rs  lib.rs  vector.rs
crates/kb-search/tests/: hybrid.rs  lexical.rs
crates/kb-source-fs/: Cargo.toml
crates/kb-source-fs/src/: connector.rs  hash.rs  lib.rs  media.rs  walker.rs
crates/kb-source-fs/tests/: snapshot_tree1.rs  symlink_cycle.rs
crates/kebab-app/: Cargo.toml
crates/kebab-app/src/: app.rs  bulk.rs  cursor.rs  derivation_payload.rs  doctor_signal.rs  error_signal.rs  error_wire.rs  expansion.rs  external.rs  fetch.rs  ingest.rs  ingest_log.rs  ingest_progress.rs  lib.rs  logging.rs  pdf_ocr_apply.rs  reset.rs  schema.rs  staleness.rs
crates/kebab-app/tests/: ask_smoke.rs  caption_cache.rs  code_ingest_smoke.rs  config_invalidation.rs  config_migrate.rs  cursor.rs  embed_cache_reingest.rs  fetch_integration.rs  file_deletion_auto_purge.rs  image_pipeline.rs  incremental_ingest.rs  ingest_cancel.rs  ingest_file.rs  ingest_lexical.rs  ingest_log_smoke.rs  ingest_pdf_ocr_smoke.rs  ingest_progress.rs  ingest_stdin.rs  init_template.rs  multi_scanned_pdf_ingest_no_chunk_id_collision.rs  ocr_caption_cache.rs  ocr_inspect_smoke.rs  open_with_config_nli.rs  paddle_image_cache.rs  pdf_ocr_apply.rs  pdf_ocr_events_insert_smoke.rs  pdf_pipeline.rs  reset_orphans.rs  schema_active_versions.rs  schema_report.rs  search_budget_integration.rs  search_korean.rs  search_lexical.rs  search_stale_integration.rs  search_vector.rs  skip_reason.rs  twin_files_fetch_span.rs  twin_files_idempotent.rs
crates/kebab-chunk/: Cargo.toml
crates/kebab-chunk/src/: code_ast_v1.rs  code_c_ast_v1.rs  code_cpp_ast_v1.rs  code_go_ast_v1.rs  code_java_ast_v1.rs  code_js_ast_v1.rs  code_kotlin_ast_v1.rs  code_python_ast_v1.rs  code_rust_ast_v1.rs  code_text_paragraph_v1.rs  code_ts_ast_v1.rs  dockerfile_file_v1.rs  k8s_manifest_resource_v1.rs  lib.rs  manifest_file_v1.rs  md_heading_v1.rs  md_heading_v2.rs  oversize.rs  pdf_page_v1.rs  tier2_shared.rs
crates/kebab-chunk/tests/: code_c_ast_snapshot.rs  code_cpp_ast_snapshot.rs  code_go_ast_snapshot.rs  code_java_ast_snapshot.rs  code_js_ast_snapshot.rs  code_kotlin_ast_snapshot.rs  code_python_ast_snapshot.rs  code_rust_ast_snapshot.rs  code_text_paragraph_v1.rs  code_ts_ast_snapshot.rs  dockerfile_file_v1.rs  k8s_manifest_resource_v1.rs  long_section_snapshot.rs  manifest_file_v1.rs  tokenize_korean.rs
crates/kebab-cli/: Cargo.toml
crates/kebab-cli/src/: cancel.rs  error_classify.rs  main.rs  progress.rs  wire.rs
crates/kebab-cli/tests/: cli_config_not_found.rs  cli_empty_query.rs  cli_error_wire.rs  cli_help_smoke.rs  cli_ingest_file.rs  cli_ingest_stdin.rs  cli_mcp_smoke.rs  cli_readonly_quiet.rs  cli_schema.rs  ingest_progress_cli.rs  reset_cli.rs  wire_ask_multi_hop.rs  wire_ask_stale.rs  wire_ask_stream.rs  wire_bulk_search.rs  wire_citation_5_variants_unchanged.rs  wire_fetch.rs  wire_schema_breakdowns.rs  wire_search_filters.rs  wire_search_filters_code.rs  wire_search_hit_no_code_fields.rs  wire_search_response.rs  wire_search_score_kind.rs  wire_search_stale.rs  wire_search_trace.rs
crates/kebab-config/: Cargo.toml
crates/kebab-config/src/: lib.rs  migrate.rs  paths.rs
crates/kebab-config/tests/: logging_roundtrip.rs  migrate_v3.rs  pdf_ocr.rs
crates/kebab-core/: Cargo.toml
crates/kebab-core/src/: answer.rs  chunk.rs  citation.rs  derivation.rs  document.rs  errors.rs  fetch.rs  ids.rs  ingest.rs  jobs.rs  lib.rs  media.rs  metadata.rs  mock.rs  search.rs  traits.rs  vector.rs  versions.rs
crates/kebab-core/tests/: mock_embedder.rs  mock_language_model.rs
crates/kebab-embed/: Cargo.toml
crates/kebab-embed-candle/: Cargo.toml
crates/kebab-embed-candle/src/: lib.rs
crates/kebab-embed-candle/tests/: arctic_ollama_parity.rs  parity.rs  thread_cap.rs
crates/kebab-embed-local/: Cargo.toml
crates/kebab-embed-local/src/: lib.rs
crates/kebab-embed-local/tests/: embed_model.rs
crates/kebab-embed-ollama/: Cargo.toml
crates/kebab-embed-ollama/src/: lib.rs
crates/kebab-embed-ollama/tests/: embed_mock.rs
crates/kebab-embed/src/: lib.rs  mock.rs
crates/kebab-embed/tests/: mock.rs  reexports.rs
crates/kebab-eval/: Cargo.toml
crates/kebab-eval/src/: compare.rs  lib.rs  loader.rs  metrics.rs  runner.rs  types.rs  variant.rs
crates/kebab-eval/tests/: loader.rs  metrics_and_compare.rs  runner.rs
crates/kebab-llm-local/: Cargo.toml
crates/kebab-llm-local/src/: error.rs  lib.rs  ollama.rs
crates/kebab-llm-local/tests/: construction.rs  (+2 more)
crates/kebab-mcp/: Cargo.toml
crates/kebab-nli/: Cargo.toml
crates/kebab-normalize/: Cargo.toml
crates/kebab-parse-code/: Cargo.toml
crates/kebab-parse-image/: Cargo.toml
crates/kebab-parse-md/: Cargo.toml
crates/kebab-parse-pdf/: Cargo.toml
(+620 files in other folders)
