[package]
name          = "kb-config"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Config schema + XDG path resolution"

[dependencies]
kb-core      = { path = "../kb-core" }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = "0.8"
dirs         = "5"
