[package]
name          = "kb-core"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "kb domain types, traits, and ID recipe (no other kb-* deps)"

[dependencies]
anyhow                    = { workspace = true }
thiserror                 = { workspace = true }
serde                     = { workspace = true }
serde_json                = { workspace = true }
time                      = { workspace = true }
blake3                    = { workspace = true }
serde_json_canonicalizer  = "0.3"
unicode-normalization     = "0.1"
