[package]
name          = "kb-llm"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "LanguageModel trait re-export + feature-gated MockLanguageModel for downstream tests"

[dependencies]
kb-core    = { path = "../kb-core" }
anyhow     = { workspace = true }

[features]
default = []
# Opt-in `MockLanguageModel`. Default OFF so release builds (no `--features mock`)
# compile the symbol out entirely (verifiable via `nm`/`cargo bloat`).
mock    = []

[dev-dependencies]
proptest = { workspace = true }
