[package]
name          = "kb-normalize"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Lift parser output (kb-parse-types) into kb-core::CanonicalDocument with deterministic IDs (§3.4, §4.2, §4.3)"

[dependencies]
kb-core         = { path = "../kb-core" }
kb-parse-types  = { path = "../kb-parse-types" }
kb-config       = { path = "../kb-config" }
serde                     = { workspace = true }
serde_json                = { workspace = true }
serde_json_canonicalizer  = "0.3"
blake3                    = { workspace = true }
unicode-normalization     = "0.1"
time                      = { workspace = true }
anyhow                    = { workspace = true }
tracing                   = { workspace = true }

[dev-dependencies]
# kb-parse-md is permitted as a *dev*-dependency only — used by the
# integration snapshot test to drive a fixture through the real parser.
# Forbidden as a regular dep per design §8 (kb-normalize must not depend
# on any specific parser); `cargo tree -p kb-normalize --depth 1` (the
# default scope, excluding dev-deps) confirms this.
kb-parse-md = { path = "../kb-parse-md" }
serde_json  = { workspace = true }
