[package]
name          = "kb-parse-md"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Markdown frontmatter (and, in p1-3, block) parsing into kb-core::Metadata / kb-parse-types intermediates"

[dependencies]
kb-core         = { path = "../kb-core" }
kb-parse-types  = { path = "../kb-parse-types" }
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
time            = { workspace = true }
# serde_yaml (dtolnay) was archived as unmaintained in 2024.
# We use the maintained fork serde_yaml_ng. Keeping the same `serde_yaml`-style
# API surface lets us swap if a different fork wins long term.
serde_yaml_ng   = "0.10"
toml            = "0.8"
# `lingua` ships every supported language as a feature flag; the `default`
# feature pulls all 75+ language models (huge build time + binary size).
# For p1-2 we only need a small subset for autodetect + tests. Add more
# languages here as future tasks call for them.
lingua          = { version = "1.8", default-features = false, features = [
    "korean",
    "english",
    "japanese",
    "chinese",
] }

[dev-dependencies]
serde_json = { workspace = true }
