[package]
name          = "kb-rag"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "RAG pipeline: retrieve → gate → pack → generate → cite-validate"

[dependencies]
kb-core         = { path = "../kb-core" }
kb-config       = { path = "../kb-config" }
kb-search       = { path = "../kb-search" }
kb-llm          = { path = "../kb-llm" }
kb-store-sqlite = { path = "../kb-store-sqlite" }
serde           = { workspace = true }
serde_json      = { workspace = true }
regex           = { workspace = true }
time            = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
blake3          = { workspace = true }

[dev-dependencies]
kb-llm          = { path = "../kb-llm", features = ["mock"] }
tempfile        = { workspace = true }
rusqlite        = { workspace = true }
serde_json      = { workspace = true }
